Youtube Video Details

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "json-server": "^0.9.6",
     "native-base": "^2.0.12",
     "react": "15.4.2",
-    "react-native": "0.42.0"
+    "react-native": "0.42.0",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.3"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
