--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "native-base": "^2.0.12",
     "react": "15.4.2",
     "react-native": "0.42.0",
+    "react-native-google-signin": "^0.9.0",
     "react-native-vector-icons": "^4.0.0",
-    "react-redux": "^5.0.3"
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
