--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "firebase": "^3.7.1",
     "json-server": "^0.9.6",
     "native-base": "^2.0.12",
     "react": "15.4.2",
